--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -114,7 +114,7 @@ $input-btn-padding-y: 0.375rem !default; // 36px
 $input-btn-padding-x-md: 1rem !default;
 $input-btn-padding-y-md: 0.25rem !default; // 32px
 $input-btn-padding-x-sm: 0.5rem !default;
-$input-btn-padding-y-sm: 0.1875rem !default;
+$input-btn-padding-y-sm: 0.125rem !default;
 $input-btn-padding-x-lg: 1rem !default;
 $input-btn-padding-y-lg: 0.656rem !default;
 
